Bluedevil daemon: Save and restore adapters state

Fixes issue that some adapters were always powered off
on startup.

BUG: 337193